--- a/menu.html
+++ b/menu.html
@@ -100,9 +100,10 @@
 
     .img-group img {
       width: 100%;
-      height: 350px;
-      object-fit: cover;
-      border-bottom: 2px solid #ff9800;
+  height: 250px;
+  object-fit: contain;
+  border-bottom: 3px solid #D43F00;
+  background: #fff; /* or any color you want behind the image */
     }
 
     .content {
@@ -326,3 +327,28 @@
    <script src="https://bhagwatiguesthouse.github.io/zaayko/zaayko-menu.js"></script> 
 </body>
 </html>
+
+ <style>
+  /* Logo Overlay CSS */
+  #logo-overlay {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+    z-index: 9999;
+  }
+
+  #logo-overlay img {
+    width: 100px;
+    height: 100px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 2px solid #fff; /* optional white border */
+    box-shadow: 0 0 8px rgba(0,0,0,0.5);
+  }
+</style>
+
+<div id="logo-overlay">
+  <img src="https://bhagwatiguesthouse.github.io/zaayko/zaayko%20logo.png" alt="Logo" />
+</div>
+
+
