--- a/menu.html
+++ b/menu.html
@@ -1,226 +1,274 @@
-<style>
-* {
-  box-sizing: border-box;
-  margin: 0;
-  padding: 0;
-  font-family: 'Segoe UI', sans-serif;
-}
-body {
-  background-color: #fdfdfd;
-  color: #333;
-  padding: 20px;
-}
-.menu-container {
-  max-width: 1200px;
-  margin: auto;
-}
-h1 {
-  text-align: center;
-  color: #d84315;
-  margin-bottom: 5px;
-  font-size: 2.5em;
-}
-.subtitle {
-  text-align: center;
-  font-style: italic;
-  color: #777;
-  margin-bottom: 30px;
-}
-.nav-container {
-  background: #fff3e0;
-  padding: 15px;
-  border-radius: 8px;
-  box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-  margin-bottom: 30px;
-}
-.menu-nav {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 10px;
-  justify-content: center;
-}
-.menu-nav button {
-  background-color: #ff9800;
-  border: none;
-  color: #fff;
-  padding: 10px 18px;
-  border-radius: 20px;
-  cursor: pointer;
-  font-weight: bold;
-  font-size: 1em;
-  transition: all 0.3s ease;
-}
-.menu-nav button:hover,
-.menu-nav button.active {
-  background-color: #e65100;
-}
-.sections-wrapper {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  gap: 30px;
-}
-.section {
-  background: #fff;
-  border-radius: 10px;
-  box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-  overflow: hidden;
-}
-.img-group img {
-  width: 100%;
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Zaayko Mo:Mo's Menu</title>
+  <style>
+    /* GLOBAL RESET */
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Segoe UI', sans-serif;
+    }
+
+    body {
+      background-color: #fdfdfd;
+      color: #333;
+      padding: 10px;
+    }
+
+    .menu-container {
+      max-width: 1200px;
+      margin: auto;
+    }
+
+    h1 {
+      text-align: center;
+      color: #d84315;
+      margin-bottom: 5px;
+      font-size: 2.2em;
+    }
+
+    .subtitle {
+      text-align: center;
+      font-style: italic;
+      color: #777;
+      margin-bottom: 25px;
+      font-size: 1em;
+    }
+
+    /* NAVIGATION BAR */
+    .nav-container {
+      background: #fff3e0;
+      padding: 12px;
+      border-radius: 8px;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.1);
+      margin-bottom: 25px;
+      overflow-x: auto;
+    }
+
+    .menu-nav {
+      display: flex;
+      gap: 10px;
+      justify-content: center;
+      flex-wrap: wrap;
+    }
+
+    .menu-nav button {
+      background-color: #ff9800;
+      border: none;
+      color: #fff;
+      padding: 8px 14px;
+      border-radius: 20px;
+      cursor: pointer;
+      font-weight: 600;
+      font-size: 0.95em;
+      transition: all 0.3s ease;
+      white-space: nowrap;
+    }
+
+    .menu-nav button:hover,
+    .menu-nav button.active {
+      background-color: #e65100;
+    }
+
+    .sections-wrapper {
+      display: grid;
+      grid-template-columns: 1fr;
+      gap: 20px;
+    }
+
+    .section {
+      background: #fff;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
+      overflow: hidden;
+    }
+
+    .img-group img {
+      width: 100%;
   height: 250px;
   object-fit: contain;
   border-bottom: 3px solid #D43F00;
-  background: #fff; /* or any color you want behind the image */
-}
-.content {
-  padding: 20px;
-}
-.content h3 {
-  color: #ff9800;
-  margin-bottom: 15px;
-  font-size: 1.4em;
-}
-.item-list {
-  display: flex;
-  flex-direction: column;
-  gap: 10px;
-}
-.item {
-  display: flex;
-  justify-content: space-between;
-  border-bottom: 1px solid #f2f2f2;
-  padding-bottom: 5px;
-  color: #444;
-  font-size: 1em;
-}
-.item span:last-child {
-  font-weight: bold;
-  color: #d84315;
-}
-</style>
+  background: #fff;
+    }
 
-<div class="menu-container">
-  <h1>🏠 Zaayko Mo:Mo's</h1>
-  <p class="subtitle">"Taste the Delight"</p>
+    .content {
+      padding: 16px;
+    }
 
-  <div class="nav-container">
-    <div class="menu-nav" id="nav-buttons"></div>
+    .content h3 {
+      color: #ff9800;
+      margin-bottom: 12px;
+      font-size: 1.3em;
+    }
+
+    .item-list {
+      display: flex;
+      flex-direction: column;
+      gap: 8px;
+    }
+
+    .item {
+      display: flex;
+      justify-content: space-between;
+      border-bottom: 1px solid #f2f2f2;
+      padding-bottom: 5px;
+      color: #444;
+      font-size: 0.95em;
+    }
+
+    .item span:last-child {
+      font-weight: bold;
+      color: #d84315;
+    }
+
+    @media (min-width: 600px) {
+      .sections-wrapper {
+        grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+        gap: 25px;
+      }
+    }
+
+    @media (min-width: 992px) {
+      .menu-nav button {
+        font-size: 1em;
+        padding: 10px 18px;
+      }
+      .content h3 {
+        font-size: 1.5em;
+      }
+    }
+
+    /* Logo Overlay */
+    #logo-overlay {
+      position: fixed;
+      top: 10px;
+      right: 10px;
+      z-index: 9999;
+    }
+    #logo-overlay img {
+      width: 80px;
+      height: 80px;
+      object-fit: cover;
+      border-radius: 50%;
+      border: 2px solid #fff;
+      box-shadow: 0 0 8px rgba(0,0,0,0.5);
+    }
+  </style>
+</head>
+<body>
+
+  <div class="menu-container">
+    <h1>🏠 Zaayko Mo:Mo's</h1>
+    <p class="subtitle">"Taste the Delight"</p>
+
+    <div class="nav-container">
+      <div class="menu-nav" id="nav-buttons"></div>
+    </div>
+
+    <div class="sections-wrapper" id="menu-sections"></div>
   </div>
 
-  <div class="sections-wrapper" id="menu-sections"></div>
-</div>
+  <div id="logo-overlay">
+    <img src="https://bhagwatiguesthouse.github.io/zaayko/zaayko%20logo.png" alt="Logo" />
+  </div>
 
-<script>
-(function(){
-function slugify(text) {
-  return text
-    .toString()
-    .trim()
-    .toLowerCase()
-    .replace(/&/g, 'and')
-    .replace(/\s+/g, '-')   
-    .replace(/[^\w-]+/g, '') 
-    .replace(/--+/g, '-');   
-}
+  <script>
+    (function(){
+      function slugify(text) {
+        return text
+          .toString()
+          .trim()
+          .toLowerCase()
+          .replace(/&/g, 'and')
+          .replace(/\s+/g, '-')   
+          .replace(/[^\w-]+/g, '') 
+          .replace(/--+/g, '-');   
+      }
 
-function initMenu(data) {
-  var navContainer = document.getElementById('nav-buttons');
-  var sectionsWrapper = document.getElementById('menu-sections');
+      function initMenu(data) {
+        var navContainer = document.getElementById('nav-buttons');
+        var sectionsWrapper = document.getElementById('menu-sections');
 
-  // Create All button
-  var allBtn = document.createElement('button');
-  allBtn.textContent = "All";
-  allBtn.classList.add('active');
-  allBtn.dataset.target = 'all';
-  navContainer.appendChild(allBtn);
+        // Create All button
+        var allBtn = document.createElement('button');
+        allBtn.textContent = "All";
+        allBtn.classList.add('active');
+        allBtn.dataset.target = 'all';
+        navContainer.appendChild(allBtn);
 
-  // Create category buttons
-  data.forEach(section => {
-    var slug = slugify(section.category);
-    var btn = document.createElement('button');
-    btn.textContent = section.category;
-    btn.dataset.target = slug;
-    navContainer.appendChild(btn);
-  });
+        // Create category buttons
+        data.forEach(section => {
+          var slug = slugify(section.category);
+          var btn = document.createElement('button');
+          btn.textContent = section.category;
+          btn.dataset.target = slug;
+          navContainer.appendChild(btn);
+        });
 
-  // Create sections
-  data.forEach(section => {
-    var slug = slugify(section.category);
-    var div = document.createElement('div');
-    div.classList.add('section', `category-${slug}`);
-    div.innerHTML = `
-      <div class="img-group">
-        <img src="${section.image}" alt="${section.category}">
-      </div>
-      <div class="content">
-        <h3>${section.title}</h3>
-        <div class="item-list">
-          ${section.items.map(item => `
-            <div class="item">
-              <span>${item.name}</span>
-              <span>${item.price}</span>
+        // Create sections
+        data.forEach(section => {
+          var slug = slugify(section.category);
+          var div = document.createElement('div');
+          div.classList.add('section', `category-${slug}`);
+          div.innerHTML = `
+            <div class="img-group">
+              <img src="${section.image}" alt="${section.category}">
             </div>
-          `).join('')}
-        </div>
-      </div>
-    `;
-    sectionsWrapper.appendChild(div);
-  });
+            <div class="content">
+              <h3>${section.title}</h3>
+              <div class="item-list">
+                ${section.items.map(item => `
+                  <div class="item">
+                    <span>${item.name}</span>
+                    <span>${item.price}</span>
+                  </div>
+                `).join('')}
+              </div>
+            </div>
+          `;
+          sectionsWrapper.appendChild(div);
+        });
 
-  // Handle button clicks
-  navContainer.addEventListener('click', function(e) {
-    if (e.target.tagName === 'BUTTON') {
-      navContainer.querySelectorAll('button').forEach(b => b.classList.remove('active'));
-      e.target.classList.add('active');
-
-      var target = e.target.dataset.target;
-
-      document.querySelectorAll('.section').forEach(sec => {
-        if (target === 'all') {
+        // Initially show all sections
+        document.querySelectorAll('.section').forEach(sec => {
           sec.style.display = 'block';
-        } else {
-          if (sec.classList.contains('category-' + target)) {
-            sec.style.display = 'block';
-          } else {
-            sec.style.display = 'none';
+        });
+
+        // Handle button clicks
+        navContainer.addEventListener('click', function(e) {
+          if (e.target.tagName === 'BUTTON') {
+            navContainer.querySelectorAll('button').forEach(b => b.classList.remove('active'));
+            e.target.classList.add('active');
+
+            var target = e.target.dataset.target;
+
+            document.querySelectorAll('.section').forEach(sec => {
+              if (target === 'all') {
+                sec.style.display = 'block';
+              } else {
+                if (sec.classList.contains('category-' + target)) {
+                  sec.style.display = 'block';
+                } else {
+                  sec.style.display = 'none';
+                }
+              }
+            });
           }
-        }
+        });
+      }
+
+      window.addEventListener('load', function(){
+        fetch("https://bhagwatiguesthouse.github.io/zaayko/menu.json")
+          .then(res => res.json())
+          .then(data => initMenu(data))
+          .catch(err => console.error(err));
       });
-    }
-  });
-}
+    })();
+  </script>
 
-// Wait for Blogspot to load everything
-window.addEventListener('load', function(){
-  fetch("https://bhagwatiguesthouse.github.io/zaayko/menu.json")
-    .then(res => res.json())
-    .then(data => initMenu(data))
-    .catch(err => console.error(err));
-});
-})();
-</script>
-
- <style>
-  /* Logo Overlay CSS */
-  #logo-overlay {
-    position: fixed;
-    top: 10px;
-    right: 10px;
-    z-index: 9999;
-  }
-
-  #logo-overlay img {
-    width: 100px;
-    height: 100px;
-    object-fit: cover;
-    border-radius: 50%;
-    border: 2px solid #fff; /* optional white border */
-    box-shadow: 0 0 8px rgba(0,0,0,0.5);
-  }
-</style>
-
-<div id="logo-overlay">
-  <img src="https://bhagwatiguesthouse.github.io/zaayko/zaayko%20logo.png" alt="Logo" />
-</div>
-
-
+</body>
+</html>
