--- a/menu.html
+++ b/menu.html
@@ -158,6 +158,17 @@
       box-shadow: 0 0 8px rgba(0,0,0,0.5);
     }
   </style>
+  <style>
+  html, body {
+    overflow: hidden !important;
+    height: 100% !important;
+  }
+
+  ::-webkit-scrollbar {
+    display: none;
+  }
+</style>
+
 </head>
 <body>
 
